--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "hts-react-form": "^0.0.8",
     "next": "12.3.0",
     "next-pwa": "5.5.4",
     "react": "18.2.0",
