--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "draft-js": "^0.11.7",
     "hts-react-form": "^0.0.8",
     "next": "12.3.0",
     "next-pwa": "5.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0"
   },
   "devDependencies": {
     "eslint": "8.23.1",
