--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "hts-react-form": "^0.0.8",
     "next": "12.3.0",
     "next-pwa": "5.5.4",
