--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "hts-react-form": "^0.0.8",
@@ -16,7 +17,8 @@
     "next-pwa": "5.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-draft-wysiwyg": "^1.15.0"
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "eslint": "8.23.1",
