--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "cookie": "^0.5.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "hts-react-form": "^0.0.8",
