--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "HTSDS Blogs",
   "short_name": "HTSDS Blogs",
   "theme_color": "#197fc1",
-  "background_color": "#197fc1",
+  "background_color": "#fff",
   "display": "standalone",
   "orientation": "",
   "scope": "/",
