--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "HTSDS Blogs",
-  "short_name": "HTSDS Blogs",
+  "short_name": "Blogs",
   "theme_color": "#197fc1",
   "background_color": "#fff",
   "display": "standalone",
