--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-grid-carousel": "^1.0.1",
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
